added clean target; changed name of compiled binary

--- a/articles/objective-c-gnu-linux/Makefile
+++ b/articles/objective-c-gnu-linux/Makefile
@@ -1,5 +1,8 @@
-main: main.m Foo.o
-	clang $(FLAGS) main.m Foo.o -o main
+main: main.m foo
+	clang $(FLAGS) main.m Foo.o -o main.bin
 
 foo: Foo.h Foo.m
 	clang $(FLAGS) Foo.m -c -o Foo.o
+
+clean:
+	rm Foo.o main.bin main.d Foo.d
