added target for stdin example

--- a/articles/c-pointer-arithmetic/Makefile
+++ b/articles/c-pointer-arithmetic/Makefile
@@ -1,4 +1,7 @@
-all: stack
+all: stack stdin
 
 stack: example-stack.c
 	gcc example-stack.c -o example-stack.bin
+
+stdin: example-stdin.c
+	gcc example-stdin.c -o example-stdin.bin
