added make target for output parameter

--- a/articles/c-pointer-arithmetic/Makefile
+++ b/articles/c-pointer-arithmetic/Makefile
@@ -1,7 +1,10 @@
-all: stack stdin
+all: stack stdin out-parameter
 
 stack: example-stack.c
 	gcc example-stack.c -o example-stack.bin
 
 stdin: example-stdin.c
 	gcc example-stdin.c -o example-stdin.bin
+
+out-parameter: example-output-parameter.c
+	gcc example-output-parameter.c -o example-output-parameter.bin
